2007-11-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Downgrade old pidb
	  version error to a warning, since it's pretty routine.

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: In
	  FindGenerateMember, the interface prefix is not added to the name
	  anymore, so there is no need to remove it.

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/IRefactorer.cs: The explicit
	  implementation prefix is now an IReturnType. Needed because types in the
	  parsed results are not fully resolved.
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: The explicit
	  implementation prefix is now an IReturnType, in this way generic types
	  can be properly used. Fixed some issues when looking for existing
	  members.
	* MonoDevelop.Projects.Parser/PersistentIndexer.cs,
	  MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Read/write the
	  explicit declaration type for indexers. Requires a database version
	  bump.
	* MonoDevelop.Projects.Parser/DefaultReturnType.cs: Added method for parsing
	  IReturnType objects from strings.

2007-11-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: When implementing
	  an interface, make sure the class is updated after adding each member.
	  Also added support for implementing indexers. Fixes bug #340865.
	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: Use
	  member.PrivateImplementationType to specify the interface name of an
	  explicit implementation. Add support for generating indexers. Fix
	  problem when locating explicit member implementations.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs, MonoDevelop.Projects/Project.cs,
	  MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs,