@@ -1,3 +1,10 @@
+2007-11-19  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Projects/Combine.cs: Catch some potential nulls and replace
+	  them with warnings.
+	* MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs: Use non-obsolete
+	  CodeDom APIs.
+
 2007-11-13  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Projects.Parser/CodeCompletionDatabase.cs: Downgrade old pidb
